--- a/src/components/sidedrawer/sidedrawer.module.css
+++ b/src/components/sidedrawer/sidedrawer.module.css
@@ -30,7 +30,7 @@
 
 .logoContainer {
     width: 100%;
-    padding: 20px;
+    padding: 10px;
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
@@ -62,7 +62,7 @@
 .nestedItem {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     top: 0;
     left: 0;
     transform: translateX(-150%);
