--- a/src/components/sidedrawer/sidedrawer.module.css
+++ b/src/components/sidedrawer/sidedrawer.module.css
@@ -3,14 +3,14 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     transition: all 0.5s ease;
     transform: translateX(-100%);
     background-color: white;
-    z-index: 700;
+    z-index: 900;
 }
 
 .container.open {
@@ -42,19 +42,21 @@
 }
 
 .navbar {
-    /* width: 100%; */
+    width: 100%;
     padding: 10px;
     box-sizing: border-box;
 }
 
 .xBtnContainer {
     width: 50px;
+    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .xBtn {
+    width: 100%;
     font-size: 1.5rem;
     color: rgb(45, 45, 45);
 }
