--- a/src/components/displayProduct/displayProduct.module.css
+++ b/src/components/displayProduct/displayProduct.module.css
@@ -117,6 +117,7 @@
 @media (max-width: 767px) {
     .container {
         grid-template-columns: repeat(2, 1fr);
+        gap: 10px;
     }
 
     .imgContainer {
