--- a/src/components/navbar/categories/categories.module.css
+++ b/src/components/navbar/categories/categories.module.css
@@ -111,6 +111,7 @@
 
 @media (max-width: 767px) {
     .container {
+        height: 100%;
         background-color: white;
         padding: 20px 0;
     }
