--- a/src/components/navbar/categories/categories.module.css
+++ b/src/components/navbar/categories/categories.module.css
@@ -111,7 +111,7 @@
 
 @media (max-width: 767px) {
     .container {
-        height: 100%;
+        height: 100vh;
         background-color: white;
         padding: 20px 0;
     }
