--- a/src/components/navbar/categories/categories.module.css
+++ b/src/components/navbar/categories/categories.module.css
@@ -122,7 +122,7 @@
 
     .listContainer {
         width: 100%;
-        height: 90vh;
+        /* height: 90vh; */
         min-height: 600px;
         grid-template-columns: repeat(2, 1fr);
         overflow-y: scroll;
