--- a/src/components/sidedrawer/sidedrawer.module.css
+++ b/src/components/sidedrawer/sidedrawer.module.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -18,7 +18,7 @@
 }
 
 .wrapper {
-    position: relative;
+    /* position: relative; */
     width: 100%;
     height: 100%;
     display: flex;
@@ -64,7 +64,7 @@
 .nestedItem {
     position: absolute;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     top: 0;
     left: 0;
     transform: translateX(-150%);
