--- a/src/components/navbar/categories/categories.module.css
+++ b/src/components/navbar/categories/categories.module.css
@@ -123,7 +123,8 @@
     .listContainer {
         width: 100%;
         /* height: 90vh; */
-        min-height: 600px;
+        min-height: 100vh;
+        justify-content: center;
         grid-template-columns: repeat(2, 1fr);
         overflow-y: scroll;
         overflow-x: hidden;
