--- a/src/components/sidedrawer/sidedrawer.module.css
+++ b/src/components/sidedrawer/sidedrawer.module.css
@@ -47,6 +47,32 @@
     box-sizing: border-box;
 }
 
+.navLists {
+    list-style: none;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.navList {
+    width: 100%;
+}
+
+.navLink {
+    text-decoration: none;
+    font-size: 1.5rem;
+    font-weight: 400;
+    color: rgb(45, 45, 45);
+    text-align: center;
+    text-transform: uppercase;
+    display: block;
+}
+
 .xBtnContainer {
     width: 50px;
     height: 50px;
