--- a/src/components/navbar/categories/categories.module.css
+++ b/src/components/navbar/categories/categories.module.css
@@ -118,12 +118,13 @@
 
     .btnContainer {
         display: flex;
+        padding: 0;
     }
 
     .listContainer {
         width: 100%;
         /* height: 90vh; */
-        min-height: 100vh;
+        /* min-height: 100vh; */
         justify-content: center;
         grid-template-columns: repeat(2, 1fr);
         overflow-y: scroll;
