--- a/src/pages/displayProducts/displayProductPanel/displayProductPanel.module.css
+++ b/src/pages/displayProducts/displayProductPanel/displayProductPanel.module.css
@@ -51,6 +51,13 @@
     text-transform: capitalize;
 }
 
+.option {
+    font-size: 1rem;
+    font-weight: 400;
+    color: rgb(45, 45, 45);
+    text-transform: capitalize;
+}
+
 @media (max-width: 767px) {
     
 }
