--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ html, body {
 
 .App {
   position: relative;
+  overflow: hidden;
   font-family: "Catamaran", serif;
   font-optical-sizing: auto;
 }
