--- a/src/components/rightPanel/rightPanel.module.css
+++ b/src/components/rightPanel/rightPanel.module.css
@@ -16,6 +16,7 @@
 }
 
 .item {
+    position: relative;
     width: 30px;
     display: flex;
     justify-content: center;
@@ -24,4 +25,147 @@
 
 .icon {
     width: 100%;
+}
+
+.counter {
+    position: absolute;
+    top: -15px;
+    right: -10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    font-size: 0.7rem;
+    font-weight: 600;
+}
+
+.cartWrapper {
+    position: absolute;
+    top: 15px;
+    right: -30px;
+    transform: translateX(150%);
+    width: 250px;
+    padding: 20px 20px 0 20px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    background-color: #363636;
+    z-index: 400;
+    transition: all 0.5s ease;
+}
+
+
+.item:hover .cartWrapper {
+    transform: translateX(0);
+}
+
+.cart {
+    width: 100%;
+    min-height: 100px;
+    max-height: 260px;
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 10px;
+}
+
+.cart::-webkit-scrollbar {
+    background-color: rgb(231, 231, 231);
+    width: 7px;
+}
+
+.cart::-webkit-scrollbar-thumb {
+    background-color: gray;
+    border-radius: 20px;
+}
+
+.cartContainer {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.imgContainer {
+    width: 80px;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    padding: 10px;
+    border-radius: 10px;
+    box-sizing: border-box;
+    background-color: white;
+}
+
+.img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.details {
+    width: calc(100% - 100px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.headingSmall {
+    font-size: 0.9rem;
+    font-weight: 400;
+    color: white;
+    text-transform: uppercase;
+    margin: 0;
+}
+
+.price {
+    font-size: 0.9rem;
+    font-weight: 400;
+    color: white;
+    margin: 0;
+}
+
+.btns {
+    width: 100%;
+    padding: 10px 0;
+    box-sizing: border-box;
+    display: flex;flex-direction: column;
+
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.totalContainer {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: 1rem;
+    font-weight: 400;
+    color: white;
+    text-transform: uppercase;
+    margin: 5px auto;
+}
+
+.btn {
+    width: 100%;
+    height: 40px;
+    border: 1px solid gray;
+    background-color: grey;
+    color: white;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: 400;
+    text-transform: uppercase;
 }
